# assignment3

./: main.py  pyproject.toml  q1.py  q1a.py  q1b.py  q2.py  q3.py  q5.py
output/q1a_chair/: E.txt  F.txt
output/q1a_teddy/: E.txt  F.txt
