[tool.poetry]
name = "assignment3"
version = "0.1.0"
description = "Assignment 3 Two-View Geometry"
authors = ["Chris Klammer <cklammer@andrew.cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
